--- a/templates/associes.html
+++ b/templates/associes.html
@@ -386,5 +386,6 @@
         document.addEventListener('DOMContentLoaded', loadInitialData);
 
     </script>
+    <script type="module" src="../js/main.js"></script> <!-- Load main JS as module -->
 </body>
-</html> 
+</html>
